--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -5,15 +5,25 @@ header {
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rosybrown;
+  background-color: #f205b393;
   height: 50px;
+  align-items: center;
+  display: flex;
+}
+.logo {
+  width: 200px;
+}
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 30vw;
+}
+ul {
+  display: flex;
 }
 li {
-  color: blanchedalmond;
-  display: inline-block;
+  color: #f8e2ee;
   margin-right: 50px;
   cursor: pointer;
   position: relative;
