--- a/src/components/transition-images/style.css
+++ b/src/components/transition-images/style.css
@@ -4,9 +4,11 @@
   white-space: nowrap; 
 }
 .image-slider img {
-  width: 100%; 
-  height: 500px;
-  background-size: cover;
+  width: 50%; 
+  height: 400px;
+  border-radius: 20px;
+  padding: 15px;
+  background-size: contain;
   background-position: center;
   display: inline-block;
   animation: slide 100s infinite;
