fix: defined media screen for mobile in the header component.

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -50,3 +50,18 @@ ul {
   background-color: #fec7b4;
   height: 5px;
 }
+@media screen and (max-width: 470px) {
+  header {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+  .logo {
+    display: none;
+  }
+  
+}
