--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -16,3 +16,24 @@
 .icon-social a{
   padding: 5px;
 }
+@media screen and (max-width: 470px) {
+  .container-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
+@media screen and (max-width: 320px) {
+  .container-footer {
+    display: none;
+  }
+}
+@media screen and (min-width: 800px) and (max-width: 900px) {
+  .container-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
