--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -9,6 +9,7 @@
   font-weight: 400;
   font-style: normal;
   font-size: 17px;
+  display: none;
 }
 .container-footer span a {
   text-decoration: underline 2px;
@@ -16,24 +17,27 @@
 .icon-social a{
   padding: 5px;
 }
+@media screen and (max-width: 321px) {
+  .container-footer {
+    display: none;
+  }
+}
 @media screen and (max-width: 470px) {
   .container-footer {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
+    display: flex;
   }
 }
-@media screen and (max-width: 320px) {
-  .container-footer {
-    display: none;
-  }
-}
+
 @media screen and (min-width: 800px) and (max-width: 900px) {
   .container-footer {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
+    display: flex;
   }
 }
