--- a/src/components/movie-list/style.css
+++ b/src/components/movie-list/style.css
@@ -22,3 +22,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 470px) {
+  .container-main {
+    padding: 60px  0px;
+  }
+}
