--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -1,14 +1,16 @@
+
 .container-footer{
-  background-color: #f205b393;
-  color: #f8e2ee;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-family: "Pacifico", cursive;
-  padding: 10px 20px;
   font-weight: 400;
   font-style: normal;
   font-size: 17px;
+  background-color: #8B56BF;
+  color: #f8e2ee;
+  padding: 10px 20px;
+  box-sizing: border-box;
   display: none;
 }
 .container-footer span a {
@@ -16,11 +18,6 @@
 }
 .icon-social a{
   padding: 5px;
-}
-@media screen and (max-width: 321px) {
-  .container-footer {
-    display: none;
-  }
 }
 @media screen and (max-width: 470px) {
   .container-footer {
@@ -32,7 +29,7 @@
   }
 }
 
-@media screen and (min-width: 800px) and (max-width: 900px) {
+@media screen and (min-width: 768px) and (max-width: 900px) {
   .container-footer {
     position: fixed;
     bottom: 0;
