--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -5,59 +5,23 @@ header {
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
-  background-color: #f205b393;
+  background-color: #8B56BF;
   height: 50px;
+  justify-content: center;
   align-items: center;
   display: flex;
   width: 100%;
 }
 .logo {
   width: 200px;
-}
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 30vw;
-}
-ul {
-  display: flex;
-}
-.header-list {
-  color: #f8e2ee;
-  margin-right: 50px;
   cursor: pointer;
-  position: relative;
-}
-.header-list::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 2px;
-  background-color: blanchedalmond;
-  transform: scaleX(0);
-  transform-origin: left;
-  transition: transform 0.5s ease;
-}
-.header-list:hover::before {
-  transform: scaleX(1);
-}
-.header-list:last-child {
-  margin-right: 0;
 }
 .header-line {
-  background-color: #fec7b4;
+  background-color: #F29B9B;
   height: 5px;
 }
 @media screen and (max-width: 470px) {
-   header {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-  }
   .logo {
-    display: none;
+    width: 160px;
   }
 }
